@@ -81,6 +81,12 @@ Payment
 
 * Removed inoperative WellsFargo payment module.
 
+Jobs
+----
+
+* Force email notification of errors, can be prevented with ignore_errors
+  setting.
+
 UI
 --
 
